--- a/scheduleMaker/views/home.ejs
+++ b/scheduleMaker/views/home.ejs
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
+    </head>
 <body>
-    
+  <%-include('partials/navbar')%>
 </body>
 </html>
