--- a/scheduleMaker/views/finalSchedule.ejs
+++ b/scheduleMaker/views/finalSchedule.ejs
@@ -4,13 +4,7 @@
     </head>
 <body>
     <%-include('partials/navbar')%>
-    <button id=" reorderSchedule">Remake Schedule</button>
-    <script src="/scheduleFuncs.js">
-     let scheduleButton = document.getElementById("reorderSchedule");
-     scheduleButton.addEventListener("click",function(){
-         newSchedule();
-     })
-    </script>
+    <a href ="/newSchedule">Click here for a new Schedule</a>
     <ul>
         <% data.forEach(function(workDay) { %>
           
