Schedule maker css updated

--- a/scheduleMaker/views/editEmployee.ejs
+++ b/scheduleMaker/views/editEmployee.ejs
@@ -39,7 +39,7 @@ To:<input type="number" id="sunWorkTo" name="sunAvailTo" min="7" max="24">
 <label for="delete"><h2 class="text-xl">Check this if Worker no longer here:</h2></label>
 <input type ="checkbox" id="delete" name = "deleteOrNot" value = "deleteYes">
 <hr>
-        <input type="submit" placeholder="submit">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
