--- a/scheduleMaker/views/newEmployee.ejs
+++ b/scheduleMaker/views/newEmployee.ejs
@@ -35,7 +35,7 @@ To:<input type="number" id="satWorkTo" name="satAvailTo" min="7" max="24">
 From:<input type="number" id="sunWorkFrom" name="sunAvailFrom" min="7" max="24">
 To:<input type="number" id="sunWorkTo" name="sunAvailTo" min="7" max="24">
 <hr>
-        <input type="submit" placeholder="submit">
+        <input type="submit" value="submit">
     </form>
     
 </body>
