--- a/scheduleMaker/views/scheduleForm.ejs
+++ b/scheduleMaker/views/scheduleForm.ejs
@@ -4,6 +4,7 @@
     </head>
 <body>
   <%-include('partials/navbar')%>
+
     <form action = "/editSchedule" method = "post">
         <label for = "openMon"><h2 class="text-xl">
             Monday
@@ -199,7 +200,7 @@
           </h2></label>
         <input type="number" id="helperSun" name = "sunAllAroundsRequired" min = 1 max = 5>
 
-        <input type="submit" placeholder="submit">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
