--- a/scheduleMaker/views/errorCreateAccount.ejs
+++ b/scheduleMaker/views/errorCreateAccount.ejs
@@ -202,7 +202,7 @@
           </h2></label>
         <input type="number" id="helperSun" name = "sunAllAroundsRequired" min = 1 max = 5>
 
-        <input type="submit" placeholder="submit">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
