--- a/scheduleMaker/views/errorLogin.ejs
+++ b/scheduleMaker/views/errorLogin.ejs
@@ -7,7 +7,7 @@
   <form action = "/" method = "post">
     UserName: <input type = "text" name = "user">
     Password: <input type = "password" name = "pw">
-    <input type="submit" placeholder="submit">
+    <input type="submit" value="submit">
 </form>
 <a href="/createAccount">Create New Account</a>
 </body>
