--- a/scheduleMaker/views/findEmployee.ejs
+++ b/scheduleMaker/views/findEmployee.ejs
@@ -7,7 +7,7 @@
     <form action = "/findEmployee" method = "post">
        <label for = "findWorker">Employees Log</label>
        <input type = "text" id = "findWorker" name = "workerName" placeholder= "Employee Name">
-        <input type="submit" placeholder="submit">
+        <input type="submit" value="submit">
     </form>
     
 </body>
